Version 1.1.0
------------------------------------------------------------------
14 February 2007
+ Removed references from object constructors
+ Removed a unneeded double urlencode and a urldecode

6 February 2007
+ Default menu is created on install.

2 February 2007
+ Links missing &amp; were causing validation errors. Fixed.
+ Fixed missing quote in config.php links
+ Updated files: conf/config.php

9 January 2007
+ Added pinLink function for developers to add a link to any menu.
+ Added mechanism for adding a pinned link.
+ Updated files: conf/config.php, templates/links/link.tpl,
  templates/menu_layout/basic.tpl, img/attach.png,
  templates/admin/pin_list.tpl

27 November 2006
+ Added a color : inherit to menu's style sheet to conform with css
  standards.

Version 1.0.4
-------------------------------------------------------------------

3 November 2006
+ Updated files - templates/links/link.tpl,
                  templates/menu_layout/basic.tpl
+ Renamed offsite links to just site links to avoid confusion
+ If you edit a link that isn't keyed, you can now change the url
+ setUrl function changed to figure url without local parameter
  setting

2 November 2006
+ Bug #1588771 - Fixed admin page not working with menu

1 November 2006
+ updated files templates/admin/offsite.tpl
+ Added cancel button to offsite template

Version 1.0.1
-------------------------------------------------------------------
31 October 2006
+ New file - templates/site_map.tpl - for new site map option
+ Updated file - templates/style.css - stylings for site map
+ Updated file - conf/config.php - Changed "offsite" to "other"
+ Added Site Map display that is accessible from clicking the menu
  name
+ The Create Offsite Link has been changed to Create Other Link.
+ Create Other Link now sets the default url to the page from which it
  was clicked. Will not use a default url from a keyed page.

21 September 2006
+ Menu associations no cleared
+ Changed function name

26 July 2006