@@ -7,12 +7,8 @@
 $proper_name  = 'Menu';
 $version      = '1.1.0';
 $register     = FALSE;
-$unregister   = TRUE;
 $import_sql   = TRUE;
-$image_dir    = FALSE;
-$file_dir     = FALSE;
 $version_http = 'http://phpwebsite.appstate.edu/downloads/modules/menu/check.xml';
 $about        = TRUE;
-$priority     = 50;
 
 ?>
