@@ -11,7 +11,6 @@ class Menu_Admin {
 
     function main()
     {
-        translate('menu');
         $title = $content = $message = NULL;
 
         PHPWS_Core::initModClass('menu', 'Menu_Item.php');
@@ -224,7 +223,6 @@ class Menu_Admin {
         $final_content = PHPWS_Template::process($tpl, 'menu', 'main.tpl');
         $panel->setContent($final_content);
         Layout::add(PHPWS_ControlPanel::display($panel->display()));
-        translate();
     }
 
     function addPinLink()
@@ -337,8 +335,6 @@ class Menu_Admin {
 
     function cpanel()
     {
-        translate('menu');
-
         PHPWS_Core::initModClass('controlpanel', 'Panel.php');
 
         if (Current_User::allow('menu', 'create_new_menu')) {
@@ -358,13 +354,11 @@ class Menu_Admin {
         $panel->quickSetTabs($tabs);
 
         $panel->setModule('menu');
-        translate();
         return $panel;
     }
 
     function editMenu(&$menu)
     {
-        translate('menu');
         $form = new PHPWS_Form;
         $form->addHidden('module', 'menu');
         $form->addHidden('command', 'post_menu');
@@ -394,7 +388,6 @@ class Menu_Admin {
         }
 
         $template = $form->getTemplate();
-        translate();
         return PHPWS_Template::process($template, 'menu', 'menu_form.tpl');
     }
 
@@ -416,7 +409,6 @@ class Menu_Admin {
 
     function menuList()
     {
-        translate('menu');
         $page_tags['TITLE'] = _('Title');
         $page_tags['ACTION'] = _('Action');
 
@@ -428,13 +420,11 @@ class Menu_Admin {
         $pager->setLink('index.php?module=menu&amp;tab=list');
         $pager->addRowTags('getRowTags');
         $content = $pager->get();
-        translate();
         return $content;
     }
 
     function pickLink()
     {
-        translate('menu');
         $menu_id = (int)$_GET['menu_id'];
         if (isset($_GET['link_id'])) {
             $link_id = (int)$_GET['link_id'];
@@ -443,9 +433,7 @@ class Menu_Admin {
         }
 
         if (!isset($_SESSION['Menu_Pin_Links'])) {
-            $msg = _('No links in queue.');
-            translate();
-            return $msg;
+            return _('No links in queue.');
         }
 
         foreach ($_SESSION['Menu_Pin_Links'] as $key=>$data) {
@@ -463,14 +451,12 @@ class Menu_Admin {
 
         $tpl = $form->getTemplate();
         $tpl['CLOSE'] = sprintf('<a href="#" onclick="window.close(); return false">%s</a>', _('Close'));
-        translate();
         return PHPWS_Template::process($tpl, 'menu', 'admin/pin_list.tpl');
     }
 
 
     function settings()
     {
-        translate('menu');
         if (!isset($_SESSION['Menu_Admin_Mode'])) {
             $vars['command'] = 'enable_admin_mode';
             $tpl['ADMIN_LINK'] = PHPWS_Text::secureLink(_('Enable Administration Mode'),
@@ -480,7 +466,6 @@ class Menu_Admin {
             $tpl['ADMIN_LINK'] = PHPWS_Text::secureLink(_('Disable Administration Mode'),
                                                         'menu', $vars);
         }
-        translate();
         return PHPWS_Template::process($tpl, 'menu', 'admin/settings.tpl');
     }
 
@@ -490,7 +475,6 @@ class Menu_Admin {
         if ($link->id) {
             $form->addHidden('link_id', $link->id);
         }
-        translate('menu');
         $form->addHidden('module', 'menu');
         $form->addHidden('command', 'post_site_link');
         $form->addHidden('menu_id', $menu->id);
@@ -518,13 +502,11 @@ class Menu_Admin {
         }
 
         $content = PHPWS_Template::process($template, 'menu', 'admin/offsite.tpl');
-        translate();
         Layout::nakedDisplay($content);
     }
 
     function postSiteLink(&$link)
     {
-        translate('menu');
         if (empty($_POST['title'])) {
             $error[] = _('Missing title.');
         } else {
@@ -545,7 +527,7 @@ class Menu_Admin {
         if (!$link->parent) {
             $link->parent = $_POST['parent_id'];
         }
-        translate();
+
         if (isset($error)) {
             return $error;
         } else {
