@@ -83,7 +83,6 @@ class Menu_Item {
 
     function post()
     {
-        translate('menu');
         if (empty($_POST['title'])) {
             $errors[] = _('Missing menu title.');
         } else {
@@ -99,15 +98,12 @@ class Menu_Item {
         }
 
         if (isset($errors)) {
-            translate();
             return $errors;
         } else {
             $result = $this->save();
             if (PEAR::isError($result)) {
                 PHPWS_Error::log($result);
-                $msg = array(_('Unable to save menu. Please check error logs.'));
-                translate();
-                return $msg;
+                return array(_('Unable to save menu. Please check error logs.'));
             }
             return TRUE;
         }
@@ -186,7 +182,6 @@ class Menu_Item {
 
     function getRowTags()
     {
-        translate('menu');
         $vars['menu_id'] = $this->id;
         $vars['command'] = 'edit_menu';
         $links[] = PHPWS_Text::secureLink(_('Edit'), 'menu', $vars);
@@ -218,7 +213,6 @@ class Menu_Item {
         $links[] = javascript('confirm', $js);
 
         $tpl['ACTION'] = implode(' | ', $links);
-        translate();
         return $tpl;
     }
 
