@@ -7,8 +7,9 @@
 if (!defined('PHPWS_SOURCE_DIR')) {
     exit();
 }
-
+translate('menu');
 Menu::show();
 Menu::showPinned();
+translate();
 
 ?>
